# foroshgah-man-shop-service

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: consumer.py  main.py  utils.py
app/api/v1/endpoints/: category.py  product.py  shop.py
app/core/: config.py  logging_config.py  rate_limiter.py
app/models/: __init__.py  base.py  category.py  product.py  shop.py
app/schemas/: category.py  product.py  shop.py
migrations/models/: 10_20241017141328_rename_category_to_shopcategory_model.py  11_20241017184600_add_productcategory_model.py  12_20241017184909_add_category_field_product_model.py  13_20241018231937_no_action_on_delete_category_field_product_model.py  14_20241022015739_add_is_active_field_shop_model.py  1_20241005180904_create_shop_model.py  2_20241010102422_name_field_nullable_shop_model.py  3_20241012195901_add_fields_shop_model.py  4_20241014151650_add_is_physical_field_shop_model.py  5_20241014222526_add_category_model.py  6_20241014224047_add_category_field_shop_model.py  7_20241014225755_add_is_active_field_category_model.py  8_20241015000049_add_image_field_category_model.py  9_20241017135709_add_product_model.py
static/: index.html
